tests/myTests/parserTests/pass/test4.c
#include "Test[4] -> Expected: Pass"
#include "Tests: Function declarations"
char _no_Params (){}
int _1_param (int args){
    int i;
}
void* _4_params_2_vars(char _char, int _int, struct _struct _structname, void _void){
    char* chai[200];
    void v;
}
void _withStatement () {
    {
        void _block_statement;
    }
}