tests/myTests/parserTests/fail/test5.c
#include "Test[5] -> Expected: Fail"
#include "Tests: Includes after struct decl"

struct _struct {
    void this_struct;
}

#include "somelib"